[gd_scene format=3 uid="uid://60bwveuu2rt"]

[ext_resource type="Script" uid="uid://cf56ce8uvkmha" path="res://battle_scene/battle_scene.gd" id="1_2r7vq"]
[ext_resource type="PackedScene" uid="uid://c7u8hryloq7hy" path="res://addons/card-framework/card_manager.tscn" id="1_rurpr"]
[ext_resource type="PackedScene" path="res://battle_scene/battle_row.tscn" id="1_rurpr_row"]
[ext_resource type="PackedScene" uid="uid://dk6rb7lhv1ef6" path="res://addons/card-framework/pile.tscn" id="2_xkfcc"]
[ext_resource type="PackedScene" uid="uid://diap3gdfbqvjv" path="res://battle_scene/my_card_factory.tscn" id="3_l4bd6"]
[ext_resource type="PackedScene" uid="uid://bkpjlq7ggckg6" path="res://addons/card-framework/hand.tscn" id="3_xp5g3"]
[ext_resource type="PackedScene" path="res://battle_scene/spell_play_zone.tscn" id="5_spell"]

[node name="BattleScene" type="Node" unique_id=465306552]
script = ExtResource("1_2r7vq")

[node name="CardManager" parent="." unique_id=1234809607 instance=ExtResource("1_rurpr")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
card_size = Vector2(160, 220)
card_factory_scene = ExtResource("3_l4bd6")

[node name="SpellPlayZone" parent="CardManager" unique_id=1316289548 instance=ExtResource("5_spell")]
layout_mode = 0
offset_left = 100.0
offset_top = 40.0
offset_right = 1700.0
offset_bottom = 740.0
mouse_filter = 2

[node name="BattleField" type="VBoxContainer" parent="CardManager" unique_id=1269234991]
layout_mode = 0
offset_left = 3.0
offset_top = -1.0
offset_right = 1920.0
offset_bottom = 850.0

[node name="Row1" parent="CardManager/BattleField" unique_id=1105774856 instance=ExtResource("1_rurpr_row")]
layout_mode = 2

[node name="Row2" parent="CardManager/BattleField" unique_id=86258571 instance=ExtResource("1_rurpr_row")]
layout_mode = 2
row_index = 1

[node name="Row3" parent="CardManager/BattleField" unique_id=17745642 instance=ExtResource("1_rurpr_row")]
layout_mode = 2
row_index = 2



[node name="Hand" parent="CardManager" unique_id=894436731 instance=ExtResource("3_xp5g3")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -180.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0

[node name="Deck" parent="CardManager" unique_id=196193800 instance=ExtResource("2_xkfcc")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -180.0
offset_right = 50.0
offset_bottom = -180.0
grow_vertical = 0
card_face_up = false
allow_card_movement = false

[node name="HandLabel" type="Label" parent="." unique_id=1794985305]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -280.0
offset_right = 21.0
offset_bottom = -257.0
grow_horizontal = 2
grow_vertical = 0
text = "Hand"

[node name="DeckLabel" type="Label" parent="." unique_id=1508836556]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -280.0
offset_right = 140.0
offset_bottom = -257.0
grow_vertical = 0
text = "Deck"

[node name="EnergyLabel" type="Label" parent="." unique_id=2127611817]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -270.0
offset_top = 750.0
offset_right = -20.0
offset_bottom = 776.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Energy: 3 / 3"

[node name="RoundLabel" type="Label" parent="." unique_id=1841404796]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -270.0
offset_top = 700.0
offset_right = -20.0
offset_bottom = 726.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Round: 1"

[node name="EndRoundButton" type="Button" parent="." unique_id=1608834043]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -280.0
offset_right = -20.0
offset_bottom = -230.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 18
text = "END ROUND"

[node name="SpeedButton" type="Button" parent="." unique_id=1459235810]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -220.0
offset_right = -20.0
offset_bottom = -170.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Speed: x 1"

[node name="NotificationLabel" type="Label" parent="." unique_id=659079838]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="EndRoundButton" to="." method="_on_end_round_button_pressed"]
[connection signal="pressed" from="SpeedButton" to="." method="_on_speed_button_pressed"]
